--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dev-exp-project",
+  "name": "blog-post-project",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,6 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/material": "^5.8.7",
+    "@tanstack/react-query": "^4.0.5",
+    "@tanstack/react-table": "^8.2.3",
+    "axios": "^0.27.2",
     "next": "12.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
