--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.7",
     "@tanstack/react-query": "^4.0.5",
+    "@tanstack/react-query-devtools": "^4.0.10",
     "@tanstack/react-table": "^8.2.3",
     "axios": "^0.27.2",
     "next": "12.2.0",
