--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "blog-post-project",
+  "name": "reusable-react-table",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -17,11 +17,13 @@
     "@tanstack/react-query-devtools": "^4.0.10",
     "@tanstack/react-table": "^8.2.3",
     "axios": "^0.27.2",
+    "lodash": "^4.17.21",
     "next": "12.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.182",
     "@types/node": "18.0.1",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.6",
